# mtk

./: CMakeLists.txt  array.c  array.h  array_bench.c  array_test.c  asm.c  asm.h  asm_bench.c  asm_test.c  assume.h  bench.h  build.ninja  build.py  checksum.c  checksum.h  checksum_bench.c  checksum_test.c  expect.h  freeform.c  freeform.h  freeform_test.c  gfx.c  gfx.h  gfx_bench.c  gfx_test.c  hash.c  hash.h  hash_bench.c  hash_test.c  len.h  matrix.c  matrix.h  murmur3.c  murmur3.h  murmur3_bench.c  murmur3_test.c  ns.c  ns.h  ns_bench.c  ns_test.c  (+14 more)
asm/: array.S  asm.S  checksum.S  gfx.S  hash.S  vm.S
